@@ -238,6 +238,7 @@ export(pdFactor.pdInd)
 export(pdInd)
 export(pdMatrix.pdInd)
 export(pfmt)
+export(pred.grid)
 export(quasi_table)
 export(render_keep)
 export(rnd)
